--- a/lstlistingStyle.sty
+++ b/lstlistingStyle.sty
@@ -12,9 +12,9 @@
 %  basicstyle=\fontsize{9}{11}\ttfamily,
   moredelim=[il][\textcolor{pgrey}]{$.$},
   moredelim=[is][\textcolor{pgrey}]{\%\%}{\%\%},
-  frame=single,
+  %frame=single,
   tabsize=2,
-  keywords={private, INDArray, double, int, new, for, return, Vector3}
+  keywords={private, public, class, double, int, new, for, return}
 }
 
 \lstdefinelanguage{prepro}{
