--- a/bericht.tex
+++ b/bericht.tex
@@ -80,7 +80,13 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{abstract}
-TODO
+In der Robotik werden oft Zeitreihen gemessen.
+Die können z.B. die Koordination von Markern auf einem Robotergreifarm sein.
+De gemessenen Daten werden oft für maschinelles Lernen aufbereitet, beispielsweise um Anomalien zu erkennen.
+Bisher erfolgte dies auf verschiedenen Wegen.\\
+In dieser Arbeit wird eine \ac{DSL} entwickelt und implementiert, die speziell auf Zeitreihen zugeschnitten ist und eine einfache Syntax bereit stellt.\\
+Für die einfachere Verwendung der neuen Sprache PrePro wird zusätzlich ein Plugin mit Syntaxhervorhebung für die NetBeans IDE implementiert.
+Die Unterstürzung eines Debuggers könnte in Zukunft noch umgesetzt werden.
 \end{abstract}
 
 \newpage
@@ -105,8 +111,8 @@ TODO
 \input{kapitel/kapitel5}
 \input{kapitel/kapitel6}
 
-\glsaddall
-\printglossary[title=Glossar,toctitle=Glossar]
+%\glsaddall
+%\printglossary[title=Glossar,toctitle=Glossar]
 
 \input{kapitel/anhang}
 
