--- a/lstlistingStyle.sty
+++ b/lstlistingStyle.sty
@@ -31,7 +31,7 @@
   moredelim=[is][\textcolor{pgrey}]{\%\%}{\%\%},
   frame=single,
   tabsize=2,
-  keywords={function, returns, import, export, vec, vec3, vec4, mat, mat3, mat4, const, optional}
+  keywords={function, returns, import, export, vec, vec3, vec4, mat, mat3, mat4, const, optional, if, else}
 }
 
 \lstdefinelanguage{docker}{
