Changed page numbering to start at first actual page

--- a/bericht.tex
+++ b/bericht.tex
@@ -10,7 +10,7 @@
 
 \usepackage[utf8]{inputenc}
 
-\usepackage[table]{xcolor} % Must be before usapackage{bericht}, because clashing package
+\usepackage[table]{xcolor} % Must be before usepackage{bericht}, because clashing package
 \usepackage{varioref}
 
 \usepackage{bericht}
@@ -66,6 +66,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{document}
+\pagenumbering{roman}
 
 {
 	\setstretch{1.0}
