--- a/kapitel/kapitel1.tex
+++ b/kapitel/kapitel1.tex
@@ -1,5 +1,7 @@
 
 \chapter{Motivation}
+\setcounter{page}{1}
+\pagenumbering{arabic}
 Immer öfter werden Probleme der realen Welt mittels neuronaler Netze gelöst.
 Allerdings kann man in den meisten Fällen nicht einfach das neuronale Netz auf die gemessenen Daten angewendet werden.
 Die Daten müssen vorher aufbereitet werden und gegebenenfalls unwichtige Daten entfernt werden.
